--- a/inventory/templates/inventory/sidenav.html
+++ b/inventory/templates/inventory/sidenav.html
@@ -23,13 +23,19 @@
           <li class="nav-item">
             <a class="nav-link" href="">
               <i class="ni ni-planet text-orange"></i>
-              <span class="nav-link-text">Icons</span>
+              <span class="nav-link-text">Products</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">
+              <i class="ni ni-planet text-orange"></i>
+              <span class="nav-link-text">Sales</span>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">
               <i class="ni ni-pin-3 text-primary"></i>
-              <span class="nav-link-text">Google</span>
+              <span class="nav-link-text">Customers</span>
             </a>
           </li>
           <li class="nav-item">
@@ -41,25 +47,7 @@
           <li class="nav-item">
             <a class="nav-link" href="">
               <i class="ni ni-bullet-list-67 text-default"></i>
-              <span class="nav-link-text">Tables</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">
-              <i class="ni ni-key-25 text-info"></i>
-              <span class="nav-link-text">Login</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">
-              <i class="ni ni-circle-08 text-pink"></i>
-              <span class="nav-link-text">Register</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">
-              <i class="ni ni-send text-dark"></i>
-              <span class="nav-link-text">Upgrade</span>
+              <span class="nav-link-text">Balance</span>
             </a>
           </li>
         </ul>
@@ -67,7 +55,7 @@
         <hr class="my-3" />
         <!-- Heading -->
         <h6 class="navbar-heading p-0 text-muted">
-          <span class="docs-normal">Documentation</span>
+          <span class="docs-normal">A new user?</span>
         </h6>
         <!-- Navigation -->
         <ul class="navbar-nav mb-md-3">
@@ -75,30 +63,6 @@
             <a class="nav-link" href="" target="_blank">
               <i class="ni ni-spaceship"></i>
               <span class="nav-link-text">Getting started</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="" target="_blank">
-              <i class="ni ni-palette"></i>
-              <span class="nav-link-text">Foundation</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="" target="_blank">
-              <i class="ni ni-ui-04"></i>
-              <span class="nav-link-text">Components</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="" target="_blank">
-              <i class="ni ni-chart-pie-35"></i>
-              <span class="nav-link-text">Plugins</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active active-pro" href="">
-              <i class="ni ni-send text-dark"></i>
-              <span class="nav-link-text">Upgrade to PRO</span>
             </a>
           </li>
         </ul>
