--- a/inventory/templates/inventory/products.html
+++ b/inventory/templates/inventory/products.html
@@ -89,7 +89,11 @@
                 <h3 class="mb-0">Products</h3>
               </div>
               <div class="col text-right">
-                <a href="" class="btn btn-sm btn-primary">Add product</a>
+                <a
+                  href="{% url 'create-product' %}"
+                  class="btn btn-sm btn-primary"
+                  >Add product</a
+                >
               </div>
             </div>
           </div>
@@ -131,10 +135,18 @@
                     {{i.date}}
                   </td>
                   <td>
-                    <a href="" class="btn btn-sm btn-info">Edit</a>
+                    <a
+                      href="{% url 'edit-product' i.id %}"
+                      class="btn btn-sm btn-info"
+                      >Edit</a
+                    >
                   </td>
                   <td>
-                    <a href="#" class="btn btn-sm btn-danger">Remove</a>
+                    <a
+                      href="{% url 'delete-product' i.id %}"
+                      class="btn btn-sm btn-danger"
+                      >Remove</a
+                    >
                   </td>
                 </tr>
                 {% endfor %}
