--- a/inventory/templates/inventory/create-product.html
+++ b/inventory/templates/inventory/create-product.html
@@ -1,65 +1,65 @@
-{% extends 'stock/base.html' %}
+
+{% extends 'inventory/base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 <!--  -->
 {% block content %}
 <!-- side nav -->
-{% include 'stock/sidenav.html' %}
+{% include 'inventory/sidenav.html' %}
 
 <div class="main-content" id="panel">
   <!-- top nav -->
-  {% include 'stock/nav.html' %}
+  {% include 'inventory/nav.html' %}
   
-  <form action="" method="POST">
-    <!-- {%  csrf_token %}
-    {{productForm}} -->
-
-    <input type="submit" name="submit">
-  </form>
-  <!-- <div class="container mt-8 pb-5">
+  
+  <div class="container mt-8 pb-5">
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-7">
           <div class="card bg-secondary border-0 mb-0">
             <div class="card-header bg-transparent pb-5">              
               <div class="btn-wrapper text-center">
-                <h3>Create Product</h3>
+                <h3 >Create Product</h3>
               </div>
             </div>
             <div class="card-body px-lg-5 py-lg-5">
+              <form action="" method="POST">
+                {%  csrf_token %}
+                {{form|crispy}}
+
+                <input type="submit" name="submit">
+              </form>
               
-              <form action="" method="POST" role="form">
+              <!-- <form action="" method="POST" role="form">
                 
-                <div class="form-group mb-3">
+                <div class="form-group">
                   <div class="input-group input-group-merge input-group-alternative">
                     <div class="input-group-prepend">
                       
                     </div>
+                    {{form.name|as_crispy_field}}
                     <input class="form-control" placeholder="Email" type="email">
                   </div>
                 </div>
-                <div class="form-group">
+
+                <div class="form-group ">
                   <div class="input-group input-group-merge input-group-alternative">
                     <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+                      
                     </div>
-                    <input class="form-control" placeholder="Password" type="password">
+                    {{form.vendor|as_crispy_field}}
+                    <input class="form-control" placeholder="Email" type="email">
                   </div>
                 </div>
                 
                 
-              </form>
+                
+              </form> -->
             </div>
           </div>
-          <div class="row mt-3">
-            <div class="col-6">
-              <a href="#" class="text-light"><small>Forgot password?</small></a>
-            </div>
-            <div class="col-6 text-right">
-              <a href="#" class="text-light"><small>Create new account</small></a>
-            </div>
-          </div>
+          
         </div>
       </div>
-    </div> -->
+    </div>
   </div>
 
   {% endblock %}
