--- a/inventory/templates/inventory/sidenav.html
+++ b/inventory/templates/inventory/sidenav.html
@@ -5,7 +5,7 @@
   <div class="scrollbar-inner">
     <!-- Brand -->
     <div class="sidenav-header align-items-center">
-      <a class="navbar-brand" href="javascript:void(0)">
+      <a class="navbar-brand" href="{% url 'home' %}">
         <!-- <img src="assets/img/brand/blue.png" class="navbar-brand-img" alt="..."> -->
       </a>
     </div>
@@ -15,39 +15,39 @@
         <!-- Nav items -->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="">
+            <a class="nav-link active" href="{% url 'home' %}">
               <i class="ni ni-tv-2 text-primary"></i>
               <span class="nav-link-text">Dashboard</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">
-              <i class="ni ni-planet text-orange"></i>
+            <a class="nav-link" href="{% url 'products' %}">
+              <i class="ni ni-box-2 text-primary"></i>
               <span class="nav-link-text">Products</span>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">
-              <i class="ni ni-planet text-orange"></i>
-              <span class="nav-link-text">Sales</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">
-              <i class="ni ni-pin-3 text-primary"></i>
+              <i class="ni ni-planet text-primary"></i>
               <span class="nav-link-text">Customers</span>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">
-              <i class="ni ni-single-02 text-yellow"></i>
-              <span class="nav-link-text">Profile</span>
+              <i class="ni ni-pin-3 text-primary"></i>
+              <span class="nav-link-text">Sales</span>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">
-              <i class="ni ni-bullet-list-67 text-default"></i>
+              <i class="ni ni-bullet-list-67 text-yellow"></i>
               <span class="nav-link-text">Balance</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">
+              <i class="ni ni-single-02 text-default"></i>
+              <span class="nav-link-text">Profile</span>
             </a>
           </li>
         </ul>
@@ -62,7 +62,7 @@
           <li class="nav-item">
             <a class="nav-link" href="" target="_blank">
               <i class="ni ni-spaceship"></i>
-              <span class="nav-link-text">Getting started</span>
+              <span class="nav-link-text">Read Docs</span>
             </a>
           </li>
         </ul>
